tests/ui/char_lit_as_u8.stderr
error: casting character literal to u8. `char`s are 4 bytes wide in rust, so casting to u8 truncates them
 --> $DIR/char_lit_as_u8.rs:7:13
  |
7 |     let c = 'a' as u8;
  |             ^^^^^^^^^
  |
note: lint level defined here
 --> $DIR/char_lit_as_u8.rs:4:9
  |
4 | #![deny(char_lit_as_u8)]
  |         ^^^^^^^^^^^^^^
  = help: Consider using a byte literal instead:
          b'a'

error: aborting due to previous error

